--- a/css/contact.css
+++ b/css/contact.css
@@ -64,7 +64,7 @@ p {
 }
 /* Contact */
 #contact{
-  background-image: url(images/contactbg2.JPG);
+  background-image: url(../images/contactbg2.JPG);
   height: 359px;
 }
 #contact .page-title{
